--- a/index.css
+++ b/index.css
@@ -6,16 +6,18 @@
     margin: 0;
     padding: 0;
 }
+
 html {
     font-size: 16px;
     font-family: 'Source Serif Pro', serif;
     color: #4A4A4A;
 }
+
 a {
     transition: all 0.3s ease 0s;
 }
 a:link {text-decoration: none;color: #4A4A4A;}
-a:hover {text-decoration: none;color: #4A4A4A;}
+a:hover {text-decoration: underline; color: #4A4A4A;}
 a:visited {text-decoration: none;color: #4A4A4A;}
 a:active {text-decoration: none;color: #4A4A4A;}
 
@@ -25,6 +27,10 @@ a:active {text-decoration: none;color: #4A4A4A;}
 }
 */
 
+
+/* Header */
+
+/* Logo */ 
 header {
     display: flex;
     justify-content: space-between;
@@ -32,57 +38,82 @@ header {
     position: fixed;
     z-index: 100;
     width: 100%;
+    height: 70px;
     padding: 20px 3%;
     background-color: white;
-    border-bottom: gray 1px solid;
+    border-bottom: rgb(165, 165, 165) 1px solid;
 }
+
 .title {
     display: inline-flex;
     align-items: center;
     cursor: pointer;
     float: left;
 }
+
+#brand {
+    font-size: 1.2em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #brand strong {
     font-weight: bolder;
 }
 #brand span {
-    margin-left: -1%;
-    color: grey;
+    margin-left: -2%;
+    color: rgb(148, 148, 148);
 }
+@media only screen and (max-width: 376px) {
+    #brand strong {
+        display: none;
+    }
+    #brand span {
+        display: none;
+    }
+}
+
+/* Navigatiin */
 .navigation {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 ul {
     list-style-type: none;
 }
+
 ul li {
     display: inline-block;
     padding: 0px 20px;
 }
 
-
-
 ul li a:hover {
-    color: #4A4A4A;
-    color: green;
-    text-decoration: none;
+    color: grey;
+    text-decoration: underline;
 }
+
 button {
     color: ivory;
-    background-color: grey;
+    background-color: rgb(155, 155, 155);
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    padding: 5px 9px;
+    padding: 0px 10px;
+    margin-left: 24px;
+    margin-top: -0.5rem;
 }
+
 button:hover {
     opacity: 0.5;
 }
+
 .desktop {
     display: flex;
-
+}
+.desktop button {
+    padding: 5px 13px;
 }
 @media only screen and (max-width: 768px) {
     .desktop {
@@ -97,17 +128,123 @@ button:hover {
     .mobile {
         display: none;
     }
-
 }
 
 i {
-    color: black;
+    color: rgb(46, 45, 45);
     font-size: 22px;
+    margin-top: 0.1rem;
 }
 
+
+/* Main Content */
+
+
+/* Banner */
 
 .main {
-    padding-top: 80px;
+    padding-top: 70px;
+}
+
+.banner {
+    position: fixed;
+    
+    /*background-color: rgb(198, 198, 198); 
+    width: 100%;
+    display: inline-flex; */
+
+}
+.banner .video {
+    overflow: hidden;
+    position: absolute;
+    z-index: 1;
+    margin-top: -120px;
+    transform: translate(-50%, -10%);
+    clip: rect(0px,500px,300px,0px);
+
+}
+.banner .image-container img {
+    display: none;
+}
+/*
+.banner .image-container img {
+    z-index: 1;
+    padding: 32px 24px;
+    width: 60%;
+    height: auto;
+    display: block;
+}
+
+@media only screen and (max-width: 768px) {
+    .banner .image-container {
+        padding: 0px 0px;
+        width: 100%;
+        height: auto;
+    }
+}
+*/
+.banner .text-container {
+    position: absolute;
+    top: 0;
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.banner::after {
+    width: 100%;
+    height: 100%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(145, 48, 48, 0.5);
+    z-index: 10;
+}
+.banner .text-container .text,
+.banner .text-container .CTA-sign-up {
+    
+}
+.banner .text-container h1 {
+    margin-bottom: 0.5rem;
+    display: flex;
+}
+
+.banner .text-container .CTA-sign-up {
+    position: relative;
+    margin-top: 2rem;
+    background-color: black;
+    padding: 5px 20px;
+    border-radius: 5px;
+    
 
 }
 
+
+/* Products */
+.products {
+    position: relative;
+    top: 600px;
+    background-color: white;
+    opacity: 0.95;
+}
+
+/* On Campus */
+.campus-pitch .image-container img {
+    display: flex;
+    padding: 32px 24px;
+    width: 60%;
+    height: auto;
+}
+
+/* Online */
+
+/* Real World */
+
+/* Footer */
